--- a/userprofile_dashboard.html
+++ b/userprofile_dashboard.html
@@ -222,8 +222,8 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <h2>Your Account</h2>
-                        <div class="row">
-                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile_orders.html'">
+                        <div class="">
+                            <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile_orders.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
                                         <img src="images/track.png" class="img-responsive" />
@@ -235,7 +235,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile.html'">
+                            <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
                                         <img src="images/login_am.png" class="img-responsive" />
@@ -247,7 +247,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile.html'">
+                            <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
                                         <img src="images/login_am.png" class="img-responsive" />
@@ -260,8 +260,8 @@
                             </div>
 
                         </div>
-                        <div class="row">
-                            <div class="col-md-4 col-sm-12 col-xs-12" onclick="location.href='userprofile_details.html'">
+                        <div class="">
+                            <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile_details.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
                                         <img src="images/track.png" class="img-responsive" />
