--- a/merchant_testimonials.html
+++ b/merchant_testimonials.html
@@ -81,39 +81,39 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
 
                         <div class="col-md-8 col-sm-8 col-xs-12 box_white no-padding">
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
                             </div>
                             
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail" class="merchan_tal_vemoew">View more</a>
                                 </div>
                             </div>
                             
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
                                 </div>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="col-md-6 col-sm-6 col-xs-12 mb20">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
                                     <p class="mercnt_talk">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</p>
                                     <a href="merchant_detail.html" class="merchan_tal_vemoew">View more</a>
@@ -123,28 +123,28 @@
                         <div class="col-md-4 col-sm-4 col-xs-12 box_grey no-padding">
                             <h3 class="bold">POPULAR STORIES</h3>
                             <div class="row mt10">
-                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                <div class="col-md-4 col-sm-12 col-xs-12 popular_image">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                 </div>
 
-                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                <div class="col-md-8 col-sm-12 col-xs-12 popular_image_link">
                                     <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
                                 </div>
                             </div>
                             <div class="row mt10">
-                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                <div class="col-md-4 col-sm-12 col-xs-12 popular_image">
                                     <img src="images/Image%20Test-2.jpg" class="img-responsive" />
                                 </div>
 
-                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                <div class="col-md-8 col-sm-12 col-xs-12 popular_image_link">
                                     <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
                                 </div>
                             </div>
                             <div class="row mt10">
-                                <div class="col-md-4 col-sm-4 col-xs-12 popular_image">
+                                <div class="col-md-4 col-sm-12 col-xs-12 popular_image">
                                     <img src="images/Image%20Test-1.jpg" class="img-responsive" />
                                 </div>
-                                <div class="col-md-8 col-sm-8 col-xs-12 popular_image_link">
+                                <div class="col-md-8 col-sm-12 col-xs-12 popular_image_link">
                                     <a href="">Why Selling on Snapdeal is Simpler than any other services offered by the other service provider so g on Snapdeal is Simpler than</a>
                                 </div>
                             </div>
