--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <link rel="stylesheet" href="css/owl.carousel.min.css" />
         <link rel="stylesheet" href="css/owl.theme.default.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" />
         <link rel="stylesheet" href="css/jquery-ui.css" />   
+        <link rel="stylesheet" href="css/style.css" />
+        
 
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -26,8 +28,8 @@
                     max: 500,
                     values: [ 75, 300 ],
                     slide: function( event, ui ) {
-                        $( "#amountStart" ).val( "Rs. " + ui.values[ 0 ]);
-                        $( "#amountEnd" ).val( "Rs. " + ui.values[ 1 ] );
+                        $( "#amountStart" ).val( " " + ui.values[ 0 ]);
+                        $( "#amountEnd" ).val( " " + ui.values[ 1 ] );
                     }
                 });
                 $( "#amountStart" ).val( "Rs. " + $( "#slider-range" ).slider( "values", 0 ));
@@ -414,6 +416,7 @@
                                                             <option value="product">I'm looking for product</option>
                                                             <option value="shop">I'm looking for shop</option>
                                                         </select>
+                                                        <i class="icon-angle-down"></i>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-sm-12 col-xs-12 no-padding">
@@ -534,7 +537,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del>$100.00</del><span class="item_price"><i class="fas fa-rupee-sign small"></i>70.00</span></p>
 
                                 </div>
                             </div>
@@ -556,7 +559,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del>$100.00</del><span class="item_price"><i class="fas fa-rupee-sign small"></i>70.00</span></p>
 
                                 </div>
                             </div>
@@ -578,7 +581,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del><i class="fas fa-rupee-sign small"></i>100.00</del><span class="item_price"><i class="fas fa-rupee-sign small"></i>70.00</span></p>
                                 </div>
                             </div>
                         </div>
@@ -599,7 +602,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del><i class="fas fa-rupee-sign small"></i>100.00</del><span class="item_price"><i class="fas fa-rupee-sign small"></i>70.00</span></p>
 
                                 </div>
                             </div>
@@ -621,7 +624,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del><i class="fas fa-rupee-sign small"></i>100.00</del><span class="item_price">$70.00</span></p>
 
                                 </div>
                             </div>
@@ -643,7 +646,7 @@
                                         <span>4.3<i class="fa fa-star checked"></i></span>
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                    <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="act_price"><i class="fas fa-rupee-sign small"></i>35.00</span><del>$100.00</del><span class="item_price"><i class="fas fa-rupee-sign small"></i>70.00</span></p>
 
                                 </div>
                             </div>
