commit as per Manis feedack
Riyas to take clean copy. Compare the style sheets

--- a/business_profile.html
+++ b/business_profile.html
@@ -146,8 +146,17 @@
                             <a href="" class="btn btn-warning btn-block signup-fb"><i class="fab fa-facebook-f"></i> Sign in with facebook</a>
                         </div>
                     </div>
-                    <div class="col-md-5 col-sm-12 col-xs-12 login_image">
-                        <img src="images/signup_illustration.png" class="img-responsive" />
+                    <div class="col-md-5 col-sm-12 col-xs-12 border_left quicklinks">
+                        <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+                            <h3 class="mb_20">Quick links</h3>
+                            <ul class="">
+                                <li class=""><a href="business_profile.html">Login & Security</a></li>
+                                <li class=""><a href="business_add_shop.html">Add shop</a></li>
+                                <li class=""><a href="business_add_product.html">Add product</a></li>
+                                <li class=""><a href="business_profile">KYC</a></li>
+                            </ul>
+                        </div>   
+            
                     </div>
                 </div>
             </div>
