--- a/business_dashboard.html
+++ b/business_dashboard.html
@@ -70,11 +70,12 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <h2>Your Account</h2>
+                        <p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia </p>
                         <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='business_profile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
+                                        <img src="images/Login.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">Login & Security</p>
@@ -85,7 +86,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='business_add_shop.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/track.png" class="img-responsive" />
+                                        <img src="images/Work%20Order.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">Add shop</p>
@@ -96,7 +97,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='business_add_product.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/track.png" class="img-responsive" />
+                                        <img src="images/Work%20Order.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">Add Product</p>
@@ -109,7 +110,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='business_profile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
+                                        <img src="images/KYC.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">KYC</p>
@@ -122,6 +123,7 @@
                 </div>
             </div>
         </section>
+        <section class="minheightfix"></section>
 
         <!-- Footer -->
         <footer class="footer_business footer_top">
