--- a/userprofile_dashboard.html
+++ b/userprofile_dashboard.html
@@ -222,11 +222,12 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <h2>Your Account</h2>
+                        <p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia </p>
                         <div class="">
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile_orders.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/track.png" class="img-responsive" />
+                                        <img src="images/Work%20Order.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">Your orders</p>
@@ -238,7 +239,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
+                                        <img src="images/Login.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">Login & Security</p>
@@ -250,7 +251,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/login_am.png" class="img-responsive" />
+                                        <img src="images/KYC.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">KYC</p>
@@ -264,7 +265,7 @@
                             <div class="col-md-4 col-sm-6 col-xs-12" onclick="location.href='userprofile_details.html'">
                                 <div class="box">
                                     <div class="col-md-3 col-sm-3 col-xs-3 image">
-                                        <img src="images/track.png" class="img-responsive" />
+                                        <img src="images/User%20details.png" class="img-responsive" />
                                     </div>
                                     <div class="col-md-9 col-sm-9 col-xs-9 cont">
                                         <p class="title">User details</p>
