--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" />
         <link rel="stylesheet" href="css/jquery-ui.css" />   
         <link rel="stylesheet" href="css/style.css" />
-        
+
 
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -416,7 +416,7 @@
                                                             <option value="product">I'm looking for product</option>
                                                             <option value="shop">I'm looking for shop</option>
                                                         </select>
-                                                        
+
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-sm-12 col-xs-12 no-padding">
@@ -710,7 +710,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
-
+                                    <p><span class="timerSpan item_price" data-expiry="Aug 11, 2019">Date</span></p>
                                 </div>
                             </div>
                         </div>
@@ -732,6 +732,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Sep 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -754,6 +755,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Oct 11, 2019">Date</span></p>
                                 </div>
                             </div>
                         </div>
@@ -775,6 +777,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Nov 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -797,6 +800,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Dec 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -819,6 +823,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jan 11, 2020">Date</span></p>
 
                                 </div>
                             </div>
@@ -846,7 +851,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
-
+                                    <p><span class="timerSpan item_price" data-expiry="Jan 11, 2020">Date</span></p>
                                 </div>
                             </div>
                         </div>
@@ -868,6 +873,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jul 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -890,6 +896,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jul 11, 2019">Date</span></p>
                                 </div>
                             </div>
                         </div>
@@ -911,6 +918,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jul 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -933,6 +941,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jul 11, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -955,6 +964,7 @@
                                     </div>
                                     <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
                                     <p><span class="act_price">$35.00</span><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                    <p><span class="timerSpan item_price" data-expiry="Jul 16, 2019">Date</span></p>
 
                                 </div>
                             </div>
@@ -2052,23 +2062,24 @@
         }
 
         loadIpadImages();
+        var x = [];
+        $(".timerSpan").each(function(index, element){
 
-
-        var deadline = new Date("Jul 10, 2019").getTime(); 
-        var x = setInterval(function() { 
-            var now = new Date().getTime(); 
-            var t = deadline - now; 
-            var days = Math.floor(t / (1000 * 60 * 60 * 24)); 
-            var hours = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60)); 
-            var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60)); 
-            var seconds = Math.floor((t % (1000 * 60)) / 1000); 
-            document.getElementById("timerTick").innerHTML = days + "d "  
-                + hours + "h " + minutes + "m " + seconds + "s "; 
-            if (t < 0) { 
-                clearInterval(x); 
-                document.getElementById("demo").innerHTML = "EXPIRED"; 
-            } 
-        }, 1000); 
-
+            var expiry = $(element).attr("data-expiry");
+            var deadline = new Date(expiry).getTime(); 
+            x[index] = setInterval(function() { 
+                var now = new Date().getTime(); 
+                var t = deadline - now; 
+                var days = Math.floor(t / (1000 * 60 * 60 * 24)); 
+                var hours = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60)); 
+                var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60)); 
+                var seconds = Math.floor((t % (1000 * 60)) / 1000); 
+                $(element).html(days + "d " + hours + "h " + minutes + "m " + seconds + "s "); 
+                if (t < 0) { 
+                    clearInterval(x[index]); 
+                    $(element).html("EXPIRED"); 
+                } 
+            }, 1000); 
+        });
     </script>
 </html>
