--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
                         <div class="sudc_menu">
-                            <nav class="navbar navbar-default">
+                            <n av class="navbar navbar-default">
                                 <div class="container">
                                     <div class="navbar-header"> 
                                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
@@ -77,7 +77,71 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li><a href="shops.html">Products & shops</a></li>
+                                            <li class="dropdown megamenu_dropdown">
+                                                <a href="" class="dropdown-toggle megamenu_toggle" id="othersubmenuhead" data-toggle="dropdown" data-hover="dropdown" role="button">
+                                                    Shop by categories 
+                                                    <i class="fas fa-chevron-down"></i>
+                                                </a>
+                                                <ul class="dropdown-menu dropdownhover-bottom megamenu_menu" role="menu" id="othersubmenuhead">
+
+                                                    <li class="dropdown dropdown-submenu megamenu_subdrpdown">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Dress
+                                                        </a>
+
+                                                        <ul class="dropdown-menu dropdownhover-right row megamenu" role="menu">
+                                                            <li class="col-md-6">
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li class="divider"></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                </ul>
+                                                            </li>
+
+                                                            <li class="col-md-6">
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li class="divider"></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                </ul>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">About SUDC card</a>
+
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="about_card.html">About SUDC card</a></li>
+                                                            <li><a href="how_it_works.html">How it works?</a>
+                                                            <li><a href="membership.html">Memberships</a></li>
+                                                            <li><a href="customerbenfits.html">Member's benifits</a></li>
+                                                            <li><a href="testimonial.html">Member's testimonials</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">About company</a>
+
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="about_company.html">About company</a></li>
+                                                            <li><a href="core_value.html">Core values</a>
+                                                            <li><a href="news_events.html">News and Events</a></li>
+                                                            <li><a href="careers.html">Careers</a></li>
+                                                            <li><a href="site_map.html">Site map</a></li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </li>
                                             <li><a href="about_card.html">About SUDC card</a></li>
                                             <li><a href="membership.html">Membership</a></li>
 
@@ -157,7 +221,7 @@
                                     <!--/.nav-collapse -->
                                 </div>
                                 <!--/.container-fluid -->
-                            </nav>
+                                </nav>
                         </div>
                     </div>
                 </div>
